--- a/settings.json
+++ b/settings.json
@@ -3,40 +3,57 @@
     {
       "id": "field_0",
       "label": "Wire No.",
-      "header": "Wire No."
+      "header": "Wire No.",
+      "headerCol": "A"
     },
     {
       "id": "field_1",
       "label": "WIRE SIZE",
-      "header": "WIRE SIZE"
+      "header": "WIRE SIZE",
+      "headerCol": ""
     },
     {
       "id": "field_2",
       "label": "DESCRIPTION STRANDS(±0.008)mm OD(±0.05)mm",
-      "header": "DESCRIPTION STRANDS(±0.008)mm OD(±0.05)mm"
+      "header": "DESCRIPTION STRANDS(±0.008)mm OD(±0.05)mm",
+      "headerCol": ""
     },
     {
       "id": "field_3",
       "label": "WIRE COLOR",
-      "header": "WIRE COLOR"
+      "header": "WIRE COLOR",
+      "headerCol": "D"
     },
     {
       "id": "field_4",
       "label": "CUTTING LENGTH ± 5 MM",
-      "header": "CUTTING LENGTH ± 5 MM"
+      "header": "CUTTING LENGTH ± 5 MM",
+      "headerCol": "E"
     },
     {
       "id": "field_6",
       "label": "TERMINAL1",
-      "header": "TERMINAL1"
+      "header": "TERMINAL1",
+      "headerCol": ""
     },
     {
       "id": "field_8",
       "label": "TERMINAL2",
-      "header": "TERMINAL2"
+      "header": "TERMINAL2",
+      "headerCol": ""
     }
   ],
-  "primaryField": "field_1",
+  "primaryFields": [
+    "field_1",
+    "field_6",
+    "field_8"
+  ],
   "scanOperation": "equals",
-  "displayField": "field_6"
+  "displayField": "field_1",
+  "displayFields": [
+    "field_1",
+    "field_3",
+    "field_6",
+    "field_8"
+  ]
 }
