--- a/settings.json
+++ b/settings.json
@@ -8,9 +8,9 @@
     },
     {
       "id": "field_1",
-      "label": "WIRE SIZE",
-      "header": "WIRE SIZE",
-      "headerCol": ""
+      "label": "Wire Size",
+      "header": "Wire Size",
+      "headerCol": "B"
     },
     {
       "id": "field_3",
@@ -19,42 +19,53 @@
       "headerCol": "D"
     },
     {
-      "id": "field_1765883633139",
-      "label": "TERMINAL1",
-      "header": "TERMINAL1",
-      "headerCol": ""
+      "id": "field_4",
+      "label": "CUTTING LENGTH ± 5 MM",
+      "header": "CUTTING LENGTH ± 5 MM",
+      "headerCol": "E"
     },
     {
-      "id": "field_1765883644031",
-      "label": "TERMINAL2",
-      "header": "TERMINAL2",
-      "headerCol": ""
+      "id": "field_6",
+      "label": "TERMINAL SIDE-A",
+      "header": "TERMINAL SIDE-A",
+      "headerCol": "G"
+    },
+    {
+      "id": "field_8",
+      "label": "TERMINAL SIDE-B",
+      "header": "TERMINAL SIDE-B",
+      "headerCol": "I"
     }
   ],
   "primaryFields": [
     "field_1",
-    "field_1765883633139",
-    "field_1765883644031"
+    "field_6",
+    "field_8"
   ],
   "scanOperation": "equals",
   "displayField": "field_1",
   "displayFields": [
     "field_1",
     "field_3",
-    "field_1765883633139",
-    "field_1765883644031"
+    "field_6",
+    "field_8"
   ],
   "removedHeaders": [
     {
-      "name": "DESCRIPTION STRANDS(±0.008)mm OD(±0.05)mm",
-      "col": "",
-      "norm": "DESCRIPTION STRANDS(±0.008)mm OD(±0.05)mm"
+      "name": "DESCRIPTION STRANDS(±0.008)mm OD(0.05)mm",
+      "col": "C",
+      "norm": "DESCRIPTION STRANDS(±0.008)mm OD(0.05)mm"
     },
     {
-      "name": "CUTTING LENGTH ± 5 MM",
-      "col": "E",
-      "norm": "CUTTING LENGTH ± 5 MM"
+      "name": "STRIPPING ± 0.5 MM",
+      "col": "F",
+      "norm": "STRIPPING ± 0.5 MM"
+    },
+    {
+      "name": "STRIPPING ± 0.5 MM",
+      "col": "H",
+      "norm": "STRIPPING ± 0.5 MM"
     }
   ],
-  "showMultiScanPanel": false
+  "showMultiScanPanel": true
 }
