--- a/settings.json
+++ b/settings.json
@@ -35,6 +35,12 @@
       "label": "TERMINAL SIDE-B",
       "header": "TERMINAL SIDE-B",
       "headerCol": "I"
+    },
+    {
+      "id": "field_1766386851750",
+      "label": "Part Number",
+      "header": "Part Number",
+      "headerCol": "J"
     }
   ],
   "primaryFields": [
@@ -43,12 +49,15 @@
     "field_8"
   ],
   "scanOperation": "equals",
-  "displayField": "field_1",
+  "displayField": "field_0",
   "displayFields": [
+    "field_0",
     "field_1",
     "field_3",
+    "field_4",
     "field_6",
-    "field_8"
+    "field_8",
+    "field_1766386851750"
   ],
   "removedHeaders": [
     {
@@ -67,5 +76,13 @@
       "norm": "STRIPPING ± 0.5 MM"
     }
   ],
-  "showMultiScanPanel": true
+  "showMultiScanPanel": true,
+  "groupingFields": [
+    {
+      "id": "field_1766386851750",
+      "label": "Part Number",
+      "header": "Part Number",
+      "headerCol": "J"
+    }
+  ]
 }
