--- a/package.json
+++ b/package.json
@@ -66,7 +66,12 @@
     ]
   },
   "dependencies": {
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "qrcode": "^1.5.1",
+    "selfsigned": "^1.10.11",
+    "socket.io": "^4.0.0"
   },
   "devDependencies": {
     "electron": "^25.3.1",
